# Valerter

./: .codecov.yml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: .gitignore  README.md
config/: config.example.yaml  config.test.yaml
debian/: postinst  postrm  prerm
docs/: architecture.md  configuration.md  getting-started.md  metrics.md  notifiers.md  performance.md
examples/: README.md
examples/cisco-switches/: README.md  config.yaml
scripts/: PERF-TEST-GUIDE.md  PERF-TEST-REPORT.md  docker-compose-perf.yaml  install.sh  load-generator.sh  mock-mattermost.py  mock-webhook.py  perf-test-config.yaml  uninstall.sh
scripts/test-notifiers/: config-test-notifiers.yaml  mock-webhook-server.py
src/: cli.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs  metrics.rs  notify.rs  parser.rs  stream_buffer.rs  tail.rs  template.rs  throttle.rs
src/config/: env.rs  mod.rs  notifiers.rs  runtime.rs  secret.rs  tests.rs  types.rs  validation.rs
src/notify/: email.rs  mattermost.rs  mod.rs  payload.rs  queue.rs  registry.rs  tests.rs  traits.rs  webhook.rs
systemd/: valerter.service
templates/: README.md  default-email.html.j2
tests/: integration_notify.rs  integration_streaming.rs  integration_validate.rs  smtp_integration.rs
tests/fixtures/: config_disabled_invalid.yaml  config_email_missing_body_html.yaml  config_invalid_basic_auth.yaml  config_invalid_notifier_type.yaml  config_invalid_regex.yaml  config_invalid_template.yaml  config_invalid_yaml.yaml  config_minimal.yaml  config_no_notifier.yaml  config_no_template.yaml  config_valid.yaml  config_with_auth.yaml  config_with_notifiers.yaml  utf8_edge_cases.json
tests/fixtures/multi-file/: config.yaml
tests/fixtures/multi-file-collision/: config.yaml
tests/fixtures/multi-file-collision/rules.d/: conflict.yaml
tests/fixtures/multi-file-cross-ref/: config.yaml
tests/fixtures/multi-file-cross-ref/rules.d/: extra.yaml
tests/fixtures/multi-file-cross-ref/templates.d/: extra.yaml
tests/fixtures/multi-file-empty/: config.yaml
tests/fixtures/multi-file-intra-collision/: config.yaml
tests/fixtures/multi-file-intra-collision/rules.d/: a.yaml  b.yaml
tests/fixtures/multi-file-invalid/: config.yaml
tests/fixtures/multi-file-invalid/rules.d/: bad.yaml
tests/fixtures/multi-file-notifier-collision/: config.yaml
tests/fixtures/multi-file-notifier-collision/notifiers.d/: conflict.yaml
tests/fixtures/multi-file-only-d/: config.yaml
tests/fixtures/multi-file-only-d/notifiers.d/: notifiers.yaml
tests/fixtures/multi-file-only-d/rules.d/: rules.yaml
tests/fixtures/multi-file-only-d/templates.d/: templates.yaml
tests/fixtures/multi-file-template-collision/: config.yaml
tests/fixtures/multi-file-template-collision/templates.d/: conflict.yaml
tests/fixtures/multi-file/notifiers.d/: extra.yaml
tools/load-generator/: Cargo.toml
tools/load-generator/src/: main.rs
(+5 files in other folders)
