[package]
name = "valerter"
version = "0.1.0"
edition = "2024"
description = "Real-time alerting from VictoriaLogs to Mattermost"
license = "MIT"

[dependencies]
# Async & Runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures-util = "0.3"
bytes = "1.11"

# HTTP Client
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }

# Configuration & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
humantime-serde = "1.1"

# URL Encoding
urlencoding = "2.1"

# Parsing & Templating
regex = "1.12"
minijinja = { version = "2.12", features = ["builtins", "json"] }

# Caching/Throttle
moka = { version = "0.12", features = ["sync"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
portpicker = "0.1"
serial_test = "3.2"
