[package]
name = "load-generator"
version = "0.1.0"
edition = "2024"
description = "High-performance log load generator for VictoriaLogs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.8"
anyhow = "1"
